--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "classnames": "^2.2.6",
+    "date-fns": "^2.19.0",
+    "prop-types": "^15.7.2",
+    "ramda": "^0.27.1",
     "react": "^17.0.1",
+    "react-confetti": "^6.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
